--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 *{
   margin: 0;
   padding: 0;
-}
-main{
-  margin-left: 0px;
 }
